--- a/style.css
+++ b/style.css
@@ -9,4 +9,118 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Oswald", sans-serif;
+    letter-spacing: 0.5px;
+}
+
+body {
+    background-color: var(--secondaryColor);
+    color: var(--primaryColor);
+    padding: 40px 30px;
+    text-align: center;
+    height: 100vh;
+}
+
+h1 {
+    font-family: "Lobster", cursive;
+    min-width: 300px;
+    margin: 0 auto 40px;
+}
+
+.grid-container {
+    max-width: 400px;
+    display: grid;
+    row-gap: 20px;
+    margin: auto;
+}
+/* -----Common----- */
+.container-control {
+    width: 100%;
+}
+
+input {
+    width: 70px;
+}
+
+button {
+    background-color: var(--primaryColor);
+    color: var(--secondaryColor);
+    border-radius: 5px;
+    border: none;
+    width: 80px;
+    height: 100%;
+    cursor: pointer;
+}
+
+/* -----Range----- */
+.range {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    gap: 10px;
+}
+.range h2 {
+    grid-column: span 2;
+}
+.range button {
+    grid-row: span 2;
+    padding: 5px;
+}
+.minimum-container,
+.maximum-container {
+    margin: auto 0 auto auto;
+}
+
+/* -----The Number----- */
+.number {
+    height: 85px;
+}
+.number b {
+    font-size: 2.2rem;
+}
+
+/* -----Guess----- */
+.guess {
+    height: 120px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 10px;
+}
+.guess h2 {
+    grid-column: span 2;
+}
+.guess input {
+    height: 40px;
+    font-size: 2rem;
+    text-align: right;
+    margin-left: auto;
+}
+.guess button {
+    padding: 5px;
+}
+.guess p {
+    grid-column: span 2;
+}
+.guess p.correct {
+    color: rgb(35, 189, 35);
+}
+.guess p.incorrect {
+    color: #fd4a4a;
+}
+
+/* -----Results----- */
+.results {
+    display: grid;
+}
+.results-table {
+    border-collapse: collapse;
+}
+thead {
+    border-bottom: 2px solid black;
+}
+tr {
+    border-bottom: 1px solid black;
+}
+td {
+    line-height: 2;
+    text-align: center;
 }
