--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     color: var(--primaryColor);
     padding: 40px 30px;
     text-align: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 h1 {
